Add board and ability to print it

--- a/Fill-A-Pix/Fill-A-Pix.fsproj
+++ b/Fill-A-Pix/Fill-A-Pix.fsproj
@@ -55,6 +55,7 @@
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
     <Compile Include="AssemblyInfo.fs" />
+    <Compile Include="Game.fs" />
     <Compile Include="OCR.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
