--- a/Fill-A-Pix/Fill-A-Pix.fsproj
+++ b/Fill-A-Pix/Fill-A-Pix.fsproj
@@ -60,6 +60,7 @@
     <Compile Include="Program.fs" />
     <None Include="App.config" />
     <Content Include="packages.config" />
+    <None Include="Debugging.fsx" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="mscorlib" />
